--- a/dis/main.css
+++ b/dis/main.css
@@ -2366,54 +2366,20 @@ table {
   overflow: visible;
   clip: auto; }
 
-/* Oswald-300 - cyrillic_latin */
+/* Oswald Light - cyrillic_latin */
 @font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 300;
-  src: url(fonts/Oswald-v13-cyrillic_latin-300.eot);
-  /* IE9 Compat Modes */
-  src: local("Oswald Light"), local("Oswald-Light");
-  src: url(fonts/Oswald-v13-cyrillic_latin-300.woff2) format("woff2");
-  /* Super Modern Browsers */
-  src: url(fonts/Oswald-v13-cyrillic_latin-300.woff) format("woff");
-  /* Modern Browsers */
-  src: url(fonts/Oswald-v13-cyrillic_latin-300.ttf) format("truetype");
-  /* Safari, Android, iOS */
-  src: url(fonts/Oswald-v13-cyrillic_latin-300.svg#Oswald) format("svg");
-  /* Legacy iOS */ }
+  font-family: 'Oswald Light';
+  src: url("fonts/Oswald-Light.ttf") format("truetype"); }
 
-/* playfair-display-regular - cyrillic_latin */
+/* Playfair Display Regular - cyrillic_latin */
 @font-face {
   font-family: 'Playfair Display';
-  font-style: normal;
-  font-weight: 400;
-  src: url(fonts/playfair-display-v10-cyrillic_latin-regular.eot);
-  /* IE9 Compat Modes */
-  src: url(fonts/playfair-display-v10-cyrillic_latin-regular.woff2) format("woff2");
-  /* Super Modern Browsers */
-  src: url(fonts/playfair-display-v10-cyrillic_latin-regular.woff) format("woff");
-  /* Modern Browsers */
-  src: url(fonts/playfair-display-v10-cyrillic_latin-regular.ttf) format("truetype");
-  /* Safari, Android, iOS */
-  src: url(fonts/playfair-display-v10-cyrillic_latin-regular.svg#PlayfairDisplay) format("svg");
-  /* Legacy iOS */ }
+  src: url("fonts/PlayfairDisplay-Regular.ttf") format("truetype"); }
 
-/* arimo-regular - cyrillic_latin */
+/* Arimo Regular - cyrillic_latin */
 @font-face {
   font-family: 'Arimo';
-  font-style: normal;
-  font-weight: 400;
-  src: url(fonts/arimo-v9-cyrillic_latin-regular.eot);
-  /* IE9 Compat Modes */
-  src: url(fonts/arimo-v9-cyrillic_latin-regular.woff2) format("woff2");
-  /* Super Modern Browsers */
-  src: url(fonts/arimo-v9-cyrillic_latin-regular.woff) format("woff");
-  /* Modern Browsers */
-  src: url(fonts/arimo-v9-cyrillic_latin-regular.ttf) format("truetype");
-  /* Safari, Android, iOS */
-  src: url(fonts/arimo-v9-cyrillic_latin-regular.svg#Arimo) format("svg");
-  /* Legacy iOS */ }
+  src: url("fonts/Arimo-Regular.ttf") format("truetype"); }
 
 form, textarea, input, select {
   font: 16px "Arimo", sans-serif;
@@ -2512,7 +2478,7 @@ html, body, .wrapper {
   background-color: #c0aa40;
   text-align: center; }
   .main-header h1 {
-    font: 20px "Oswald", sans-serif;
+    font: 20px "Oswald Light", sans-serif;
     font-weight: 300;
     line-height: 48px;
     color: #fff; }
@@ -2532,7 +2498,7 @@ html, body, .wrapper {
   box-shadow: -4px 10px 5px 5px rgba(0, 0, 0, 0.3);
   position: relative; }
   .page p {
-    font: 20px "Oswald", sans-serif;
+    font: 20px "Oswald Light", sans-serif;
     font-weight: 300; }
 
 .popup {
@@ -2699,14 +2665,14 @@ html, body, .wrapper {
 .excerpt-header .excerpt-title {
   display: block;
   float: left;
-  font: 30px "Oswald", sans-serif;
+  font: 30px "Oswald Light", sans-serif;
   font-weight: 300; }
 
 .excerpt-header .excerpt-category {
   display: block;
   float: right;
   margin-top: 10px;
-  font: 20px "Oswald", sans-serif;
+  font: 20px "Oswald Light", sans-serif;
   color: #9d9d9d; }
 
 .excerpt-body {
