--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,38 +1,19 @@
 @import 'fontAwesome/font-awesome';
 
-/* Oswald-300 - cyrillic_latin */
+/* Oswald Light - cyrillic_latin */
 @font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 300;
-  src: url(fonts/Oswald-v13-cyrillic_latin-300.eot); /* IE9 Compat Modes */
-  src: local('Oswald Light'), local('Oswald-Light');
-  src: url(fonts/Oswald-v13-cyrillic_latin-300.woff2) format('woff2'); /* Super Modern Browsers */
-  src: url(fonts/Oswald-v13-cyrillic_latin-300.woff) format('woff'); /* Modern Browsers */
-  src: url(fonts/Oswald-v13-cyrillic_latin-300.ttf) format('truetype'); /* Safari, Android, iOS */
-  src: url(fonts/Oswald-v13-cyrillic_latin-300.svg#Oswald) format('svg'); /* Legacy iOS */
+  font-family: 'Oswald Light';
+  src: url("fonts/Oswald-Light.ttf") format('truetype');
 }
 
-/* playfair-display-regular - cyrillic_latin */
+/* Playfair Display Regular - cyrillic_latin */
 @font-face {
   font-family: 'Playfair Display';
-  font-style: normal;
-  font-weight: 400;
-  src: url(fonts/playfair-display-v10-cyrillic_latin-regular.eot); /* IE9 Compat Modes */
-  src: url(fonts/playfair-display-v10-cyrillic_latin-regular.woff2) format('woff2'); /* Super Modern Browsers */
-  src: url(fonts/playfair-display-v10-cyrillic_latin-regular.woff) format('woff'); /* Modern Browsers */
-  src: url(fonts/playfair-display-v10-cyrillic_latin-regular.ttf) format('truetype'); /* Safari, Android, iOS */
-  src: url(fonts/playfair-display-v10-cyrillic_latin-regular.svg#PlayfairDisplay) format('svg'); /* Legacy iOS */
+  src: url("fonts/PlayfairDisplay-Regular.ttf") format('truetype');
 }
 
-/* arimo-regular - cyrillic_latin */
+/* Arimo Regular - cyrillic_latin */
 @font-face {
   font-family: 'Arimo';
-  font-style: normal;
-  font-weight: 400;
-  src: url(fonts/arimo-v9-cyrillic_latin-regular.eot); /* IE9 Compat Modes */
-  src: url(fonts/arimo-v9-cyrillic_latin-regular.woff2) format('woff2'); /* Super Modern Browsers */
-  src: url(fonts/arimo-v9-cyrillic_latin-regular.woff) format('woff'); /* Modern Browsers */
-  src: url(fonts/arimo-v9-cyrillic_latin-regular.ttf) format('truetype'); /* Safari, Android, iOS */
-  src: url(fonts/arimo-v9-cyrillic_latin-regular.svg#Arimo) format('svg'); /* Legacy iOS */
+  src: url("fonts/Arimo-Regular.ttf") format('truetype');
 }
